# faktest-rust

./: Cargo.toml  MASC_Updated.md  README.md
frontend-student/: package.json
frontend-student/src/: App.tsx
migrations/: 20260522100000_initial_schema.down.sql  20260522100000_initial_schema.up.sql
src/: config.rs  db.rs  error.rs  main.rs
src/handlers/: auth.rs  mod.rs
src/models/: mod.rs  test_attempt.rs  user.rs
